--- a/WebContent/adiciona-contato.html
+++ b/WebContent/adiciona-contato.html
@@ -18,21 +18,21 @@
   		  <div class="form-row">
 			    <div class="form-group col-md-2">
 			      <label for="inputName">Nome</label>
-			      <input type="nome" class="form-control" id="inputNome" placeholder="">
+			      <input type="text" name="nome" class="form-control" id="inputNome" placeholder="">
 			    </div>
 			    
 			    <div class="form-group col-md-2">
 			      <label for="inputEmail">Email</label>
-			      <input type="email" class="form-control" id="inputEmail" placeholder="">
+			      <input type="text" name="email" class="form-control" id="inputEmail" placeholder="">
 			    </div>
 			    
 			    <div class="form-group col-md-2">
 			      <label for="inputAddress">Endereco</label>
-			      <input type="text" class="form-control" id="inputEndereco" placeholder="">
+			      <input type="text" name="endereco" class="form-control" id="inputEndereco" placeholder="">
 			    </div>  
 			    <div class="form-group col-md-2">	
 			      <label for="inputDataNascimento">Data Nascimento</label>
-			      <input type="text" class="form-control" id="inputDataNascimento" placeholder="">
+			      <input type="text" name="dataNascimento" class="form-control" id="inputDataNascimento" placeholder="">
 			    </div>   		   		   
 		  </div>
 		   <button type="submit" class="btn btn-primary">Gravar</button> 
